--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,6 +18,7 @@
   --color-grey5: #2a2e35;
   --color-grey6: #12181b;
   --br-sm-2:14px;
+  --box-shadow-1: 0 3px 15px rgba(0,0,0,.2); 
 
 }
 
@@ -87,3 +88,40 @@ section{
   transform: translateY(0) scale(1);
 }
 
+//controls
+.controls{
+  position: fixed;
+  z-index: 10;
+  top: 50%;
+  right: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%);
+  .active-btn{
+    background-color: var(--color-secondary) !important;
+    transition: all .4 ease-in-out;
+      i{
+        color: var(--color-white) !important;
+      }
+  }
+  .control{
+    padding: 1rem;
+    cursor: pointer;
+    background-color: var(--color-grey4);
+    height: 55px;
+    width: 55px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: .7rem 0;
+    box-shadow: var(--box-shadow-1);
+    i{
+      font-size: 1.2rem;
+      color: var(--color-grey2);
+      pointer-events: none;
+    }
+  }
+}
