--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -166,7 +166,7 @@ section{
         transition: all .4s ease-in-out;
         filter:  grayscale(100%);
         &:hover{
-          filter: grayscale(0)
+          filter: grayscale(0);
         }
       }
     }
@@ -188,8 +188,53 @@ section{
     }
   }
 }
+
 .profile-pic{
   clip-path: polygon(50% 0, 90% 0, 90% 100%, 50% 100%, 25% 50%);
 }
 
 //independent components
+
+.btn-con{
+  display: flex;
+  align-self: flex-start;
+}
+.main-btn{
+border-radius: 30px;
+color: inherit;
+font-weight: 600;
+position: relative;
+border: 1px solid var(--color-secondary);
+display: flex;
+align-self: flex-start;
+display: flex;
+align-items: center;
+overflow: hidden;
+.btn-text{
+  padding: 0 2rem;
+}
+.btn-icon{
+  background-color: var(--color-secondary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  padding: 1rem;
+}
+&::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(-100%);
+  transition: all .4s ease-out;
+  z-index: -1;
+}
+&:hover{
+  &::before{
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-secondary);
+  }
+}
+}
