--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -193,6 +193,56 @@ section{
   clip-path: polygon(50% 0, 90% 0, 90% 100%, 50% 100%, 25% 50%);
 }
 
+//about
+.about-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 3.5rem;
+  padding-bottom: 5rem;
+  .right-about{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    .about-item{
+      border: 1px solid var(--color-grey5);
+      border-radius: 5px;
+      transition: all .4s ease-out;
+      box-shadow: 1px 2px 15px rgba(0,0,0,.1);
+      &:hover{
+        cursor: default;
+        transform: translateY(-5px);
+        border: 1px 4px 15px rgba(0,0,0,.32);
+      }
+      .about-text{
+        padding: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        .large-text{
+          font-size: 3rem;
+          font-weight: 700;
+          color: var(--color-secondary);
+        }
+        .small-text{
+          padding-left: 3rem;
+          position: relative;
+          text-transform: uppercase;
+          font-size: 1.2rem;
+          letter-spacing: 2px;
+          &::before{
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 15px;
+            width: 2rem;
+            height: 2px;
+            background-color: var(--color-grey5);
+          }
+        }
+      }
+    }
+  }
+}
+
 //independent components
 
 .btn-con{
@@ -226,7 +276,7 @@ overflow: hidden;
   position: absolute;
   top: 0;
   right: 0;
-  transform: translateX(-100%);
+  transform: translateX(100%);
   transition: all .4s ease-out;
   z-index: -1;
 }
@@ -235,6 +285,30 @@ overflow: hidden;
     width: 100%;
     height: 100%;
     background-color: var(--color-secondary);
+    transform: translate(0);
   }
 }
+}
+.main-title{
+  text-align: center;
+  h2{
+    position: relative;
+    text-transform: uppercase;
+    font-size: 4rm;
+    font-weight: 700;
+    span{
+      color: var(--color-secondary);
+    }
+    .bg-text{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      color: var(--color-grey5);
+      transition: all .4s ease-out;
+      z-index: -1;
+      transform: translate(-50%,-50%);
+      font-weight: 800;
+      font-size: 6.3rem;
+    }
+  }
 }
