--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -241,6 +241,18 @@ section{
       }
     }
   }
+  .left-about{
+    padding-right: 5rem;
+  p{
+    line-height: 2rem;
+    padding: 1rem;
+    color: var(--color-grey1);
+  }
+  h4{
+    font-size: 2rem;
+    text-transform: uppercase;
+  }
+  }
 }
 
 //independent components
