--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,8 +21,7 @@
 	--box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.2);
 }
 .profile-pic {
-	-webkit-clip-path: polygon(50% 0, 90% 0, 90% 100%, 50% 100%, 25% 50%);
-	clip-path: polygon(50% 0, 90% 0, 90% 100%, 50% 100%, 25% 50%);
+	clip-path: polygon(30% 0, 88% 0, 88% 100%, 30% 100%, 10% 51%);
 }
 
 .light-mode {
@@ -871,9 +870,10 @@ section {
 		padding-top: 3rem;
 	}
 	.profile-pic {
-		clip-path: circle(37.5% at 50% 39%);
-		display: flex;
-		justify-content: center;
+    clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+    width: 70%;
+    margin-top: 3rem;
+    margin-left: 7rem;
 	}
 }
 @media screen and (max-width: 700px) {
@@ -903,6 +903,18 @@ section {
 		font-size: 4rem;
 	}
 	.profile-pic {
-		clip-path: inset(12% 7% 34% 39%);
+		clip-path: polygon(
+			20% 0%,
+			80% 0%,
+			100% 20%,
+			100% 60%,
+			72% 74%,
+			28% 74%,
+			0 60%,
+			0% 20%
+		);
+		height: 55%;
+		margin-left: 5rem;
+		margin-top: -15rem;
 	}
 }
