--- a/styles/styles.css
+++ b/styles/styles.css
@@ -151,6 +151,30 @@ section {
 	pointer-events: none;
 }
 
+.lang-btn {
+	top: 13%;
+	right: 3%;
+	width: 70px;
+	height: 70px;
+	border-radius: 50%;
+	background-color: var(--color-grey-4);
+	cursor: pointer;
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+	transition: all 0.1s ease-in-out;
+}
+.lang-btn:active {
+	transform: translateY(-3px);
+}
+.lang-btn i {
+	font-size: 1.4rem;
+	color: var(--color-grey-2);
+	pointer-events: none;
+}
+
 /*Header-content*/
 .header-content {
 	display: grid;
@@ -640,6 +664,11 @@ section {
 		width: 50px;
 		height: 50px;
 	}
+  .lang-btn {
+    top: 11%;
+		width: 50px;
+		height: 50px;
+	}
 
 	.header-content {
 		grid-template-columns: repeat(1, 1fr);
@@ -913,8 +942,7 @@ section {
 			0 60%,
 			0% 20%
 		);
-		height: 55%;
 		margin-left: 5rem;
-		margin-top: -15rem;
+		margin-top: 5rem;
 	}
 }
